--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -26,25 +24,46 @@
 					<argLine>-Djava.library.path=${basedir}/omnet</argLine>
 				</configuration>
 			</plugin>
-			
-		<!-- 	<plugin>
-				<groupId>com.googlecode.mavennatives</groupId>
-				<artifactId>maven-nativedependencies-plugin</artifactId>
-				<version>0.0.7</version>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<configuration>
+					<mainClass>cz.cuni.mff.d3s.isola2016.demo.DemoLauncher</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<configuration>
-							<nativesTargetDir>.</nativesTargetDir>
-							<separateDirs>false</separateDirs>
-						</configuration>
-						<id>unpacknatives</id>
-						<phase>generate-resources</phase>
+						<id>copy</id>
+						<phase>build</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>cz.cuni.mff.d3s.jdeeco</groupId>
+									<artifactId>cz.cuni.mff.d3s.jdeeco.network.omnet</artifactId>
+									<version>3.0.2</version>
+									<classifier>natives-windows64-debug</classifier>
+									<type>dll</type>
+									<overWrite>true</overWrite>
+									<outputDirectory>${project.build.directory}/lib</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin>
+
+			<!-- <plugin> <groupId>com.googlecode.mavennatives</groupId> <artifactId>maven-nativedependencies-plugin</artifactId> 
+				<version>0.0.7</version> <executions> <execution> <configuration> <nativesTargetDir>.</nativesTargetDir> 
+				<separateDirs>false</separateDirs> </configuration> <id>unpacknatives</id> 
+				<phase>generate-resources</phase> <goals> <goal>copy</goal> </goals> </execution> 
+				</executions> </plugin> -->
 
 
 
@@ -67,6 +86,11 @@
 			<groupId>cz.cuni.mff.d3s.jdeeco</groupId>
 			<artifactId>cz.cuni.mff.d3s.jdeeco.network.omnet</artifactId>
 			<version>3.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
 		</dependency>
 	</dependencies>
 
